test/spec/custom_section.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/custom_section.wast
(;; STDOUT ;;;
assert_malformed error:
  third_party/testsuite/custom_section.wast:58:4: error in binary module: @0x0000000a: unable to read u32 leb128: string length
  (module
   ^^^^^^
assert_malformed error:
  third_party/testsuite/custom_section.wast:66:4: error in binary module: @0x0000000a: invalid section size: extends past end
  (module
   ^^^^^^
assert_malformed error:
  third_party/testsuite/custom_section.wast:74:4: error in binary module: @0x00000031: invalid section code: 36; max is 11
  (module
   ^^^^^^
assert_malformed error:
  third_party/testsuite/custom_section.wast:83:4: error in binary module: @0x0000003e: function signature count != function body count
  (module
   ^^^^^^
third_party/testsuite/custom_section.wast:58: assert_malformed passed:
  error: @0x0000000a: unable to read u32 leb128: string length
third_party/testsuite/custom_section.wast:66: assert_malformed passed:
  error: @0x0000000a: invalid section size: extends past end
third_party/testsuite/custom_section.wast:74: assert_malformed passed:
  error: @0x00000031: invalid section code: 36; max is 11
third_party/testsuite/custom_section.wast:83: assert_malformed passed:
  error: @0x0000003e: function signature count != function body count
4/4 tests passed.
;;; STDOUT ;;)
